More styling with the videos

--- a/SeaShantyEncyclopedia/templates/info.html
+++ b/SeaShantyEncyclopedia/templates/info.html
@@ -47,56 +47,83 @@
     </div>
 
     <div>
-      <div class="entry">
-        <p> "Gone are the limewalks of yesteryear, with their bowry roads and paradise streets.
+      <div class="entry largetext">
+        <p class="center quote"> "Gone are the limewalks of yesteryear, with their bowry roads and paradise streets.
           Gone are the wooden ships with their canvas sails and the shanty men, their ballads
           songs and teals. But the seas are still here. And the voices are still singing, and
           the music of the squeezebox fills the air. The wind is in the rigging. Put not your
           trust in the shanty man, but in the shanties." </p>
         <br>
-        <p> What are shanties? </p>
+        <p class="bold"> What are shanties? </p>
         <p> Sea shanties are traditionaly work songs that were sung onboard of merchant sailing vessels.
-        Lately this term has expanded to encompass sea ballads and maritime folk songs.</p>
+        Lately this term has expanded to encompass sea ballads and maritime folk songs.
+        Sea shanties were used to organize labor on board of ships and co-ordinate pulls and
+        pushes both on deck and with pumps </p>
 
-
-
-        <p> Sea shanties were used to organize labor on board of ships and co-ordinate pulls and
-          pushes both on deck and with pumps </p>
-
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/2Ta9F1q_3Gs"
-        frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-        allowfullscreen></iframe>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/KBT8pbM6nVA"
-        frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-        allowfullscreen></iframe>
+        <div class="align-center">
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/2Ta9F1q_3Gs"
+          frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen></iframe>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/KBT8pbM6nVA?start=77"
+          frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen></iframe>
+        </div>
 
         <p> Sea shanties live on today with a small community of listeners. A few Sea shanty bands such
-          as 'The Longest Johns' continue to record their rendition of Shanties and produce their own
-          for the niche community. </p>
+          as 'The Longest Johns' continue to record sea shanties and even make their own for the
+          niche community. </p>
 
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/4uukiGqUdzg?start=6"
-        frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-        allowfullscreen></iframe>
+        <div class="align-center">
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/3KEcC7wqpfs"
+          frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope;
+          picture-in-picture" allowfullscreen></iframe>
 
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/7FPD-GgP-ZE" frameborder="0"
+           allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen></iframe>
+          </div>
+          
         <p> "To me!" is a common phrase in found in nearly all traditional sea shanties. The "To Me!"
           was the call from the shantyman (The man leading the shanty) for the rest of the singers to
           sing out the refrain </p>
 
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/2wgedMKGtlk?start=29"
-         frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+        <div class="align-center">
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/2wgedMKGtlk?start=29"
+           frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen></iframe>
+
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/nCs8d1fdkkc"
+            frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen></iframe>
+          </div>
+
+        <p> Sea shanties rose to a small ammount of popularity through ubisofts release of 'Assasins
+          creed: Black flag' which featured many sea shanties. Recent movies such as: "Blow the man
+          down" and "Fisherman's freinds" have highlighted the shanty/folk singing community"</p>
+
+        <div class="align-center">
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/nEj7SV75D38?start=4"
+          frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen></iframe>
 
-        <p> Sea shanties rose to a small ammount of popularity through ubisofts release of 'Assasins creed: Black flag'</p>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/08A-jXPVx68"
+          frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen></iframe>
+        </div>
 
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/08A-jXPVx68?start=6"
-        frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-        allowfullscreen></iframe>
+        <p> Sea Shanties fell out of fasion with the end of sailing ships, it was in the 1960's when sea
+        shanties would experience a small revival with the American second folk revival. Sea shanties
+        would continue to hold a marginal audience.</p>
 
-        <p> Sea shanties transition to folk </p>
+        <div class="align-center">
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/B6Nl3PaTimA?start=41"
+          frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen></iframe>
 
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/B6Nl3PaTimA?start=41"
-        frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-        allowfullscreen></iframe>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/b69sxCiiBmY"
+           frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+           allowfullscreen></iframe>
+         </div>
 
       </div>
     </div>
