--- a/SeaShantyEncyclopedia/static/style.css
+++ b/SeaShantyEncyclopedia/static/style.css
@@ -24,6 +24,34 @@ body {
   display: none;
 }
 
+.align-center {
+  align-content: center;
+  border: solid;
+  border-width: 2px;
+  border-radius: 5px;
+  background-color: var(--c1);
+  margin:auto;
+  width:62%;
+  padding:15px;
+
+}
+
+.center {
+  text-align: center;
+}
+
+.quote {
+  font-style: italic;
+}
+
+.bold {
+  font-weight: bold;
+}
+
+.largetext {
+  font-size: 20px;
+}
+
 .hide {
   display: none;
 }
@@ -63,6 +91,7 @@ body {
   height: 70px;
   padding-right: 10px;
 }
+
 .dropdown {
   font-size: 20px;
   display: none;
