--- a/SeaShantyEncyclopedia/static/style.css
+++ b/SeaShantyEncyclopedia/static/style.css
@@ -20,6 +20,11 @@ body {
   color: var(--c3);
 }
 
+.dropdownselect {
+  position: relative;
+  font-family: Hind;
+}
+
 .collapsed .info {
   display: none;
 }
