More styling of the buttons in the home and login page

--- a/SeaShantyEncyclopedia/templates/home.html
+++ b/SeaShantyEncyclopedia/templates/home.html
@@ -48,7 +48,7 @@
             {% endfor %}
           </select> </th>
 
-          <th> <button id="gotoButton"> Go to </button> </th>
+          <th> <button class="smallButton" id="gotoButton"> Go to </button> </th>
 
 
 
