--- a/SeaShantyEncyclopedia/static/style.css
+++ b/SeaShantyEncyclopedia/static/style.css
@@ -23,6 +23,13 @@ body {
 .dropdownselect {
   position: relative;
   font-family: Hind;
+  display: inline-block;
+  text-align: center;
+  padding: 0px;
+  margin:4px;
+  background-color:var(--c4);
+  color:var(--c3);
+  border-color: var(--c2);
 }
 
 .collapsed .info {
@@ -72,7 +79,6 @@ body {
 
 .navbar {
   list-style-type: none;
-  height:30px;
   margin-top: 10px;
   margin-bottom: 10px;
   margin-left: 0px;
@@ -84,7 +90,7 @@ body {
   padding-left:10px;
   border-left:0px;
   border-right:0px;
-  padding:4px;
+  padding:0px;
 }
 
 .navtable {
@@ -139,6 +145,7 @@ body {
   background-color:var(--c4);
   color:var(--c3);
   border-color: var(--c2);
+  padding:3px;
 }
 
 .entry {
