--- a/SeaShantyEncyclopedia/templates/login.html
+++ b/SeaShantyEncyclopedia/templates/login.html
@@ -8,13 +8,18 @@
     <link rel="mask-icon" href="/static/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
+
+    <link rel="stylesheet" href="/static/style.css">
+    <title> Log In </title>
   </head>
 
-    <body>
-    <p> Enter Password </p>
-    <form action = "" method = "post">
-      <p><input type="password" id="input" name="input"></p>
-      <p><input type ="submit" value = "Login"></p>
-    </form>
+  <body>
+    <div class="entry">
+      <p class="bold largetext"> Enter Password </p>
+      <form action = "" method = "post">
+        <p><input type="password" id="input" name="input"></p>
+        <p><input type ="submit" value = "Login"></p>
+      </form>
+    </div>
   </body>
 </html>
