--- a/SeaShantyEncyclopedia/templates/info.html
+++ b/SeaShantyEncyclopedia/templates/info.html
@@ -112,7 +112,7 @@
           allowfullscreen></iframe>
         </div>
 
-        <p> Sea Shanties fell out of fasion with the end of sailing ships, it was in the 1960's when sea
+        <p> Sea Shanties fell out of fashion with the end of sailing ships, it was in the 1960's when sea
         shanties would experience a small revival with the American second folk revival. Sea shanties
         would continue to hold a marginal audience.</p>
 
