--- a/SeaShantyEncyclopedia/templates/info.html
+++ b/SeaShantyEncyclopedia/templates/info.html
@@ -98,9 +98,9 @@
             allowfullscreen></iframe>
           </div>
 
-        <p> Sea shanties rose to a small ammount of popularity through ubisofts release of 'Assasins
+        <p> Sea shanties rose to a small amount of popularity through ubisofts release of 'Assasins
           creed: Black flag' which featured many sea shanties. Recent movies such as: "Blow the man
-          down" and "Fisherman's freinds" have highlighted the shanty/folk singing community"</p>
+          down" and "Fisherman's freinds" have highlighted the shanty/folk singing community</p>
 
         <div class="align-center">
           <iframe width="560" height="315" src="https://www.youtube.com/embed/nEj7SV75D38?start=4"
