--- a/SeaShantyEncyclopedia/templates/info.html
+++ b/SeaShantyEncyclopedia/templates/info.html
@@ -48,7 +48,7 @@
           </form>
           {% endif %}</th>
 
-          <th> <form method="" action="/changeTheme">
+          <th> <form method="" action="/changeTheme?r=/info">
             {% if session.theme == 'light' %} <!-- These two buttons are only here for visuals, the changing between light and dark is handled in the code -->
                 <input type="submit" class="smallButton" value="Dark">
             {% else %}
